...

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activitySearchUser_margin"
            android:layout_marginRight="@dimen/activitySearchUser_margin"
            android:layout_marginLeft="@dimen/activitySearchUser_margin"
            android:background="@drawable/shape_elevation_form"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:onRefreshListener="@{vm::search}"
            app:refreshing="@{vm.loading}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scrollbars="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
