<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.smparkworld.githubsearcher.model.User"/>
        <import type="kotlin.Unit"/>
        <variable
            name="onClick"
            type="kotlin.jvm.functions.Function1&lt;User, Unit>" />
        <variable
            name="user"
            type="User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/itemSearchUserAdapter_padding"
        android:onClick="@{() -> onClick.invoke(user)}"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/itemSearchUserAdapter_avatarSize"
            android:layout_height="@dimen/itemSearchUserAdapter_avatarSize"
            android:layout_marginRight="@dimen/itemSearchUserAdapter_avatarMargin"
            android:layout_marginLeft="@dimen/itemSearchUserAdapter_avatarMargin"
            app:loadCircleImg="@{user.avatarUrl}"
            android:contentDescription="@string/logoContentDescription" />

        <TextView
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{user.uid}"
            android:textColor="@color/black"
            android:textSize="@dimen/itemSearchUserAdapter_nameTextSize"/>

    </LinearLayout>

</layout>